--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
   "name": "lion-ui-1",
-  "version": "0.0.0",
+  "version": "0.0.4",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "resolutions": {
-    "node-sass":"npm:sass@1.26.11"
+    "node-sass": "npm:sass@1.26.11"
   },
   "dependencies": {
     "github-markdown-css": "4.0.0",
     "marked": "1.1.1",
     "prismjs": "1.21.0",
-    "vue": "3.0.0-rc.1",
+    "roughjs": "^4.3.1",
+    "vue": "3.0.0",
     "vue-router": "4.0.0-beta.3"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "3.0.0-rc.1",
-    "rollup-plugin-esbuild": "^4.1.0",
-    "rollup-plugin-scss": "^2.6.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.32.11",
+    "@vue/compiler-sfc": "3.0.0",
+    "dart-sass": "^1.25.0",
+    "rollup-plugin-esbuild": "2.5.0",
+    "rollup-plugin-scss": "2.6.0",
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-vue": "6.0.0-beta.10",
+    "sass": "^1.26.11",
     "vite": "1.0.0-rc.1"
   }
 }
