--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "github-markdown-css": "4.0.0",
     "marked": "1.1.1",
+    "mitt": "^2.1.0",
     "prismjs": "1.21.0",
     "roughjs": "^4.3.1",
     "vue": "3.0.0",
