--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prismjs": "1.21.0",
     "roughjs": "^4.3.1",
     "vue": "3.0.0",
-    "vue-router": "4.0.0-beta.3"
+    "vue-router": "4.0.0-beta.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "3.0.0",
