--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "mitt": "^2.1.0",
     "prismjs": "1.21.0",
     "roughjs": "^4.3.1",
-    "vue": "3.0.0",
+    "vue": "^3.2.4",
     "vue-router": "4.0.0-beta.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "3.0.0",
+    "@vue/compiler-sfc": "^3.2.4",
     "dart-sass": "^1.25.0",
     "rollup-plugin-esbuild": "2.5.0",
     "rollup-plugin-scss": "2.6.0",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-vue": "6.0.0-beta.10",
     "sass": "^1.26.11",
-    "vite": "1.0.0-rc.1"
+    "vite": "^2.5.0"
   }
 }
