--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mitt": "^2.1.0",
     "prismjs": "1.21.0",
     "roughjs": "^4.3.1",
+    "tiny-emitter": "^2.1.0",
     "vue": "3.2.20",
     "vue-router": "4.0.0-beta.3",
     "vuex": "^4.0.2"
