--- a/package.json
+++ b/package.json
@@ -24,11 +24,9 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@vue/compiler-sfc": "3.2.20",
-    "dart-sass": "^1.25.0",
     "rollup-plugin-esbuild": "2.5.0",
-    "rollup-plugin-scss": "2.6.0",
-    "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-vue": "6.0.0-beta.10",
     "sass": "^1.26.11",
     "vite": "1.0.0-rc.13"
